<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pixel_wallpaper">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_text"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:textSize="@dimen/my_value4"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:autofillHints="@string/first_name"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:autofillHints="@string/last_name"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:autofillHints="@string/username"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextOccupation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:autofillHints="@string/occupation"
            android:hint="@string/occupation"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:maxLength="@string/fifty"
            android:autofillHints="@string/description"
            android:hint="@string/max"
            android:inputType="text"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/textViewDOB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_value4"
            android:layout_marginBottom="@dimen/my_value6"
            android:text="@string/dob"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="parent"

            android:layout_gravity="center_horizontal" />

        <DatePicker
            android:id="@+id/dobDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:calendarTextColor="@color/black"
            android:layout_gravity="center_horizontal" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:onClick="goToTabActivity" />

    </LinearLayout>
</ScrollView>

