<resources>
    <string name="app_name">AD340_HW5</string>
    <string name="my_text">Boyd,Jack 5/15/2020</string>

    <string name="click_me">Click Me!</string>
    <string name="ad340">AD340 App</string>

    <string name="sign_up">SIGN UP</string>
    <string name="thank_you">Thank You for Signing Up</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="dob">Date of Birth</string>
    <string name="occupation">Occupation</string>
    <string name="description">Description</string>

    <string name="submit">Submit</string>
    <string name="back">Back</string>

    <string name="invalid_first">Invalid First Name</string>
    <string name="invalid_last">Invalid Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_user">Invalid Username</string>
    <string name="invalid_occu">Invalid Occupation</string>
    <string name="invalid_desc">Invalid Description</string>
    <string name="invalid_dob">Must be over 18</string>

    <string name="invalid_distance">Distance must be between 0 and 50</string>
    <string name="invalid_age_range">Check your Min and Max</string>
    <string name="invalid_privacy">Privacy must be Private or Public</string>

    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>


    <string name="max">Description 50 characters max</string>
    <string name="age">Age</string>
    <string name="edit">Edit</string>

    <string name="twenty">20</string>
    <string name="year">2000</string>
    <string name="forty">40</string>
    <string name="fifty">50</string>

    <string name="profile">PROFILE</string>
    <string name="matches">MATCHES</string>
    <string name="settings">SETTINGS</string>

    <string name="symbol"><![CDATA[<<]]></string>
    <string name="like">Like</string>
    <string name="True">true</string>

    <string name="britta">Britta</string>
    <string name="dean">Dean Pelton</string>
    <string name="troy_abed">Troy and Abed</string>
    <string name="magnitude">Magnitude</string>

    <string name="desc_dean">I\'m learning Excel</string>
    <string name="desc_troy_abed">Troy and Abed in the Morning</string>
    <string name="desc_magnitude">Pop Pop!</string>
    <string name="desc_britta">I lived in New York</string>
    <string name="appTitle">Greendale Friend Finder</string>
    <string name="testFirstName">Ben</string>
    <string name="testLastName">Chang</string>
    <string name="testEmail">ELTigre@greendalecollege.edu</string>
    <string name="testOccupation">Spanish Teacher</string>
    <string name="testDescription">I am a man who can never die</string>
    <string name="you_liked">"You Liked "</string>
    <string name="you_unliked">"You Unliked "</string>

    <string name="listenerError"> must implement LikeClickListener</string>

    <string name="reminder_hint">Ex. 6:00</string>
    <string name="max_distance_hint">Ex. 20</string>
    <string name="gender_hint">Ex. Male, Female, Other</string>
    <string name="privacy_hint">Ex. Public/Private</string>
    <string name="max_age_hint">Ex. 30</string>
    <string name="min_age_hint">Ex. 18</string>

    <string name="reminder_title">Set Match Reminder Time (24hrs)</string>
    <string name="max_distance_title">Set Max Distance (mi)</string>
    <string name="gender_title">Gender</string>
    <string name="privacy_title">Account Privacy</string>
    <string name="max_age_title">Set Max Age</string>
    <string name="min_age_title">Set Min Age</string>

    <string name="save">Save</string>
    <string name="test_email">john.boyd@seattlecolleges.edu</string>
    <string name="none">No email value</string>
    <string name="gender">Male</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="none_value">None</string>
    <string name="invalid_settings">Please recheck entered settings</string>
    <string name="fifty_mi">50</string>
    <string name="invalid_age">Must input Min and Max age</string>
    <string name="eighteen">18</string>
    <string name="thirty">30</string>
    <string name="zero">0</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="test_email_1">test@test.com</string>
    <string name="test_email_2">test@test.net</string>
    <string name="test_email_3">t@g.com</string>
    <string name="test_email_4">r@g.com</string>
    <string name="test_email_5">r@o.com</string>
    <string name="pressed_location">Location has been pressed</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="gps_provider_started_running">GPS provider started running</string>
    <string name="gps_provider_update">GPS Provider update</string>
    <string name="test_email_6">e@c.com</string>
    <string name="match">match</string>
    <string name="phone">phone</string>
    <string name="sign_in">Sign in</string>
</resources>
